# sysml-v2

./: .gitignore  .gitmodules  .project  README.md  flake.nix  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  sbt.list
.zed/: settings.json
experiements/: sysml2py.py
model/: drone_delivery_service.sysml  structure.sysml  types.sysml
src/: main.py
templates/: README.md.j2
