[project]
name = "sysml-v2"
version = "0.1.0"
description = "Experiements with sysml-v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pysysml2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
pysysml2 = { git = "https://github.com/DAF-Digital-Transformation-Office/PySysML2" }
